Fix overflow on promo page

--- a/promo/css/promo-main.css
+++ b/promo/css/promo-main.css
@@ -25,6 +25,7 @@ html {
 html,
 body {
   height: 100%;
+  overflow-x: hidden !important;
 }
 
 
